# transcriber

./: .gitignore  pyproject.toml
transcriber/: download_audio.py  speech_to_text.py  transcribe.py
